cloud computing setup

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,26 @@
+cython
+numpy
+multidict
+attrs
+pandas
+yarl
+async-timeout
+requests
+Pillow==7.0
+idna_ssl
+charset-normalizer
+aiosignal
 torch
 torchvision
 torchaudio
 pytorch-lightning
 wandb
 tqdm
-requests
-pandas
 scikit-learn
 scikit-image
 matplotlib
-pytorch-lightning
-lightning
 opencv-python
 scikit-video
 sk-video
+scipy
+lightning
